// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Passes in the next-js-passing test project 1`] = `
"🚀 UpLeveled Preflight
[32m[COMPLETED][39m All changes committed to Git
[32m[COMPLETED][39m ESLint
[32m[COMPLETED][39m ESLint config is latest version
[32m[COMPLETED][39m GitHub repo has deployed project link under About
[32m[COMPLETED][39m Next.js project has sharp installed
[32m[COMPLETED][39m No dependencies without types
[32m[COMPLETED][39m No dependency problems
[32m[COMPLETED][39m No extraneous files committed to Git
[32m[COMPLETED][39m No secrets committed to Git
[32m[COMPLETED][39m No unused dependencies
[32m[COMPLETED][39m Preflight is latest version
[32m[COMPLETED][39m Prettier
[32m[COMPLETED][39m Project folder name matches correct format
[32m[COMPLETED][39m Stylelint
[32m[COMPLETED][39m Stylelint config is latest version
[32m[COMPLETED][39m Use single package manager
[32m[COMPLETED][39m node_modules/ folder ignored in Git
[33m[STARTED][39m All changes committed to Git
[33m[STARTED][39m ESLint
[33m[STARTED][39m ESLint config is latest version
[33m[STARTED][39m GitHub repo has deployed project link under About
[33m[STARTED][39m Next.js project has sharp installed
[33m[STARTED][39m No dependencies without types
[33m[STARTED][39m No dependency problems
[33m[STARTED][39m No extraneous files committed to Git
[33m[STARTED][39m No secrets committed to Git
[33m[STARTED][39m No unused dependencies
[33m[STARTED][39m Preflight is latest version
[33m[STARTED][39m Prettier
[33m[STARTED][39m Project folder name matches correct format
[33m[STARTED][39m Stylelint
[33m[STARTED][39m Stylelint config is latest version
[33m[STARTED][39m Use single package manager
[33m[STARTED][39m node_modules/ folder ignored in Git"
`;

exports[`Passes in the next-js-passing test project 2`] = `""`;

exports[`Passes in the react-passing test project 1`] = `
"🚀 UpLeveled Preflight
[32m[COMPLETED][39m All changes committed to Git
[32m[COMPLETED][39m ESLint
[32m[COMPLETED][39m ESLint config is latest version
[32m[COMPLETED][39m GitHub repo has deployed project link under About
[32m[COMPLETED][39m No dependencies without types
[32m[COMPLETED][39m No dependency problems
[32m[COMPLETED][39m No extraneous files committed to Git
[32m[COMPLETED][39m No secrets committed to Git
[32m[COMPLETED][39m No unused dependencies
[32m[COMPLETED][39m Preflight is latest version
[32m[COMPLETED][39m Prettier
[32m[COMPLETED][39m Project folder name matches correct format
[32m[COMPLETED][39m Stylelint
[32m[COMPLETED][39m Stylelint config is latest version
[32m[COMPLETED][39m Use single package manager
[32m[COMPLETED][39m node_modules/ folder ignored in Git
[33m[STARTED][39m All changes committed to Git
[33m[STARTED][39m ESLint
[33m[STARTED][39m ESLint config is latest version
[33m[STARTED][39m GitHub repo has deployed project link under About
[33m[STARTED][39m No dependencies without types
[33m[STARTED][39m No dependency problems
[33m[STARTED][39m No extraneous files committed to Git
[33m[STARTED][39m No secrets committed to Git
[33m[STARTED][39m No unused dependencies
[33m[STARTED][39m Preflight is latest version
[33m[STARTED][39m Prettier
[33m[STARTED][39m Project folder name matches correct format
[33m[STARTED][39m Stylelint
[33m[STARTED][39m Stylelint config is latest version
[33m[STARTED][39m Use single package manager
[33m[STARTED][39m node_modules/ folder ignored in Git"
`;

exports[`Passes in the react-passing test project 2`] = `""`;
